--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>AI Chat Terminal - Free AI Models</title>
+    <meta name="color-scheme" content="dark">
+    <title>Chatty</title>
 
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="/favicon.png">
@@ -64,7 +65,7 @@
         </div>
 
         <div class="chat-input-container">
-            <textarea class="chat-input" id="messageInput" rows="1" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="Type your message..."></textarea>
+            <textarea class="chat-input" id="messageInput" rows="1" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" inputmode="text" enterkeyhint="send" placeholder="Type your message..."></textarea>
             <div class="input-spinner" id="inputSpinner">
                 <div class="spinner-dot"></div>
                 <div class="spinner-dot"></div>
