--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
             <div class="chat-title">
                 <span class="status-indicator" id="statusIndicator"></span>
                 <div class="model-title" id="modelTitle">whoami</div>
+                <div class="role-title" id="roleTitle">🤖 General Assistant</div>
             </div>
             <div class="header-right">
                 <div id="contextUsage" class="context-usage" style="font-size: 10px; color: #666; margin-bottom: 2px;">Context: --</div>
@@ -70,9 +71,23 @@
                 </div>
             </div>
         </div>
+
+        <!-- Role selection modal -->
+        <div class="role-modal" id="roleModal">
+            <div class="role-modal-content">
+                <div class="role-modal-header">
+                    <h3>🎭 Select Role</h3>
+                    <button class="role-modal-close" id="roleModalClose">×</button>
+                </div>
+                <div class="role-list" id="roleList">
+                    <div class="role-list-loading">Loading roles...</div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- External Libraries -->
+    <script src="https://unpkg.com/lz-string@1.5.0/libs/lz-string.min.js"></script>
     <script src="https://unpkg.com/marked@12.0.0/marked.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
     <!-- Highlight.js with comprehensive language support -->
@@ -80,6 +95,7 @@
 
     <!-- Application Scripts -->
     <script src="/js/markdown.js"></script>
+    <script src="/js/role-manager.js"></script>
     <script src="/js/terminal-chat.js"></script>
 </body>
 </html>
