--- a/public/index.html
+++ b/public/index.html
@@ -93,9 +93,6 @@
     <!-- Highlight.js with comprehensive language support -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 
-    <!-- Application Scripts -->
-    <script src="/js/markdown.js"></script>
-    <script src="/js/role-manager.js"></script>
-    <script src="/js/terminal-chat.js"></script>
+    <script type="module" src="/js/terminal-chat.js"></script>
 </body>
 </html>
