--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Chatty - at openrouter tester</title>
+    <title>Chatty - OpenRouter Terminal Chat</title>
 
     <!-- PWA Meta Tags -->
     <meta name="description" content="Chatty - Free AI Chat at openrouter tester with multi-language optimization">
@@ -23,76 +23,70 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%23000'/%3E%3Ctext y='70' font-size='60' fill='%2300ff00'%3E$%3C/text%3E%3C/svg%3E">
     <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 180 180'%3E%3Crect width='180' height='180' fill='%23000' rx='20'/%3E%3Ctext x='90' y='110' text-anchor='middle' font-size='100' fill='%2300ff00'%3E$%3C/text%3E%3C/svg%3E">
 
-    <!-- PWA Manifest -->
-    <link rel="manifest" href="/manifest.json">
-
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- 모노플렉스Nerd 폰트 -->
+    <style>
+      @font-face {
+        font-family: 'MonoplexKRNerd';
+        src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_Monoplex-nerd@1.0/MonoplexKRNerd-Regular.woff2') format('woff2');
+        font-weight: 400;
+        font-style: normal;
+      }
+      @font-face {
+        font-family: 'MonoplexKRNerd';
+        src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_Monoplex-nerd@1.0/MonoplexKRNerd-Medium.woff2') format('woff2');
+        font-weight: 500;
+        font-style: normal;
+      }
+      @font-face {
+        font-family: 'MonoplexKRNerd';
+        src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_Monoplex-nerd@1.0/MonoplexKRNerd-Bold.woff2') format('woff2');
+        font-weight: 700;
+        font-style: normal;
+      }
+    </style>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="/css/main.css">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        
+        html, body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow-x: hidden;
+            background: #000000;
+        }
+        
+        #svelte-app {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+    <link rel="stylesheet" href="/svelte/main.css">
 </head>
 <body>
-    <div class="chat-container">
-        <div class="chat-header">
-            <div class="chat-title">
-                <span class="status-indicator" id="statusIndicator"></span>
-                <div class="model-title" id="modelTitle">whoami</div>
-                <div class="role-title" id="roleTitle">🤖 General Assistant</div>
-            </div>
-            <div class="header-right">
-                <div id="contextUsage" class="context-usage" style="font-size: 10px; color: #666; margin-bottom: 2px;">Context: --</div>
-                <div id="authStatus" style="font-size: 11px; color: #666;">Authentication required</div>
-            </div>
-        </div>
+    <!-- Svelte 앱이 전체 UI를 담당 -->
+    <div id="svelte-app"></div>
 
-        <div class="chat-output" id="output">
-            <!-- Messages will be added dynamically by JavaScript -->
-        </div>
-
-        <div class="chat-input-container">
-            <textarea class="chat-input" id="messageInput" rows="1" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="Type your message..."></textarea>
-            <button class="send-button" id="sendButton" disabled type="button">
-                <span class="send-arrow" style="font-size: 22px; font-weight: bold;">↑</span>
-            </button>
-        </div>
-
-        <!-- Model selection modal -->
-        <div class="model-modal" id="modelModal">
-            <div class="model-modal-content">
-                <div class="model-modal-header">
-                    <h3>Select Model</h3>
-                    <button class="model-modal-close" id="modelModalClose">×</button>
-                </div>
-                <div class="model-list" id="modelList">
-                    <div class="model-list-loading">Loading models...</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Role selection modal -->
-        <div class="role-modal" id="roleModal">
-            <div class="role-modal-content">
-                <div class="role-modal-header">
-                    <h3>🎭 Select Role</h3>
-                    <button class="role-modal-close" id="roleModalClose">×</button>
-                </div>
-                <div class="role-list" id="roleList">
-                    <div class="role-list-loading">Loading roles...</div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- External Libraries -->
+    <!-- External Libraries (Svelte 앱에서 사용) -->
     <script src="https://unpkg.com/lz-string@1.5.0/libs/lz-string.min.js"></script>
     <script src="https://unpkg.com/marked@12.0.0/marked.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
-    <!-- Highlight.js with comprehensive language support -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 
-    <script type="module" src="/js/terminal-chat.js"></script>
+    <!-- Svelte 앱 -->
+    <script type="module" src="/svelte/bundle.js"></script>
+
 </body>
 </html>
