--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,9 @@
         }
     </style>
     <link rel="stylesheet" href="/svelte/main.css">
+    <link rel="stylesheet" href="/svelte/components.css">
+    <link rel="stylesheet" href="/svelte/modals.css">
+    <link rel="stylesheet" href="/svelte/highlight.css">
 </head>
 <body>
     <!-- Svelte 앱이 전체 UI를 담당 -->
