--- a/public/index.html
+++ b/public/index.html
@@ -25,28 +25,18 @@
     <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 180 180'%3E%3Crect width='180' height='180' fill='%23000' rx='20'/%3E%3Ctext x='90' y='110' text-anchor='middle' font-size='100' fill='%2300ff00'%3E$%3C/text%3E%3C/svg%3E">
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fastly.jsdelivr.net" crossorigin>
+    <!-- MonoplexKRNerd 폰트 최적화 로딩 - Regular만 preload -->
+    <link rel="preload" href="https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_Monoplex-nerd@1.0/MonoplexKRNerd-Bold.woff2" as="font" type="font/woff2" crossorigin>
+    
     <!-- 모노플렉스Nerd 폰트 -->
     <style>
-      @font-face {
-        font-family: 'MonoplexKRNerd';
-        src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_Monoplex-nerd@1.0/MonoplexKRNerd-Regular.woff2') format('woff2');
-        font-weight: 400;
-        font-style: normal;
-      }
-      @font-face {
-        font-family: 'MonoplexKRNerd';
-        src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_Monoplex-nerd@1.0/MonoplexKRNerd-Medium.woff2') format('woff2');
-        font-weight: 500;
-        font-style: normal;
-      }
       @font-face {
         font-family: 'MonoplexKRNerd';
         src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_Monoplex-nerd@1.0/MonoplexKRNerd-Bold.woff2') format('woff2');
         font-weight: 700;
         font-style: normal;
+        font-display: swap;
       }
     </style>
 
